<resources>
    <string name="app_name">MedKit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="fullname">FullName</string>
    <string name="phonenumber">PhoneNumber</string>
    <string name="email_username">Email/Username</string>
    <string name="re_type_password">Re-Type Password</string>
    <string name="create_password">Create Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="or_sign_in_with">Or sign in with</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="onboarding_slide1_title">Create an account</string>
    <string name="onboarding_slide1_subtitle">Connect with people around the world</string>
    <string name="onboarding_slide1_headline">DRUG IDENTIFIER</string>
    <string name="onboarding_slide1_desc">MedKit Allows you scan and identify legal drugs in pharmacies and other distrubutors.</string>
    <string name="share">Share</string>
    <string name="text_copied">Copied to clipboard</string>
    <string name="history">History</string>
    <string name="qr_hint">Hover to QR-code</string>
    <string name="privacy_policy"><u>Privacy policy</u></string>
    <string name="flashlight_turned_on">Flashlight turned on</string>
    <string name="flashlight_turned_off">Flashlight turned off</string>
    <string name="onboarding_slide2_title">Login to your account</string>
    <string name="onboarding_slide2_subtitle">Let\'s build connection with new people</string>
    <string name="onboarding_slide2_headline">MEET A DOC</string>
    <string name="onboarding_slide2_desc">A key feature that allows you find, call and meet doctors around you..</string>
    <string name="nasa_api_key">vhffBqdirTXkXsS1qjKlAMkWx2CtBzNDI5MJwd06</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="change_layout_manager">Change Layout</string>

</resources>