<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">


    <EditText
        android:id="@+id/phone_text"
        android:layout_width="295dp"
        android:layout_height="50dp"
        android:layout_marginTop="396dp"
        android:background="@drawable/textview_bg"
        android:ems="10"
        android:hint="@string/phonenumber"
        android:inputType="phone"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/fullname_text"
        android:layout_width="295dp"
        android:layout_height="50dp"
        android:background="@drawable/textview_bg"
        android:ems="10"
        android:hint="@string/fullname"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/password_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.595" />

    <EditText
        android:id="@+id/email_text"
        android:layout_width="295dp"
        android:layout_height="50dp"
        android:layout_marginTop="184dp"
        android:background="@drawable/textview_bg"
        android:ems="10"
        android:hint="@string/email_username"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/confirm_password_text"
        android:layout_width="295dp"
        android:layout_height="50dp"
        android:background="@drawable/textview_bg"
        android:ems="10"
        android:hint="@string/re_type_password"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.536" />


    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="100dp"
        android:layout_height="25.89dp"
        app:layout_constraintBottom_toTopOf="@+id/email_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.43"
        app:srcCompat="@drawable/med_kit_logo2" />

    <EditText
        android:id="@+id/password_text"
        android:layout_width="295dp"
        android:layout_height="50dp"
        android:background="@drawable/textview_bg"
        android:ems="10"
        android:hint="@string/create_password"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.412" />

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="140dp"
        android:layout_height="44dp"
        android:background="@drawable/sign_in"
        android:fontFamily="@font/poppins_light"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textColor="#F1EDED"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_text"
        app:layout_constraintVertical_bias="0.598" />

    <TextView
        android:id="@+id/alternate_sign_in_text"
        android:layout_width="121dp"
        android:layout_height="12.32dp"
        android:layout_marginBottom="108dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/or_sign_in_with"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/gmail_button"
        android:layout_width="41dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toEndOf="@+id/facebook_button"
        app:layout_constraintTop_toBottomOf="@+id/alternate_sign_in_text"
        app:layout_constraintVertical_bias="0.252"
        app:srcCompat="@drawable/gmail" />

    <ImageButton
        android:id="@+id/facebook_button"
        android:layout_width="26dp"
        android:layout_height="26dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.389"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alternate_sign_in_text"
        app:layout_constraintVertical_bias="0.271"
        app:srcCompat="@drawable/facebook" />

</androidx.constraintlayout.widget.ConstraintLayout>