<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="100dp"
            android:layout_height="25.89dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            app:srcCompat="@drawable/med_kit_logo2" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/login_email_text"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="20dp"
                    android:background="@drawable/textview_bg"
                    android:ems="10"
                    android:hint="@string/email_username"
                    android:inputType="textEmailAddress"
                    android:textAlignment="center"
                    app:layout_constraintVertical_bias="0.857" />

                <EditText
                    android:id="@+id/password_text"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="20dp"
                    android:background="@drawable/textview_bg"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textAlignment="center" />


                <ImageButton
                    android:id="@+id/sign_in_button"
                    android:layout_width="132dp"
                    android:layout_height="44dp"
                    android:layout_gravity="center"
                    android:background="@drawable/sign_in_button"
                    android:clickable="true"
                    android:onClick="onLogin"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/forgot_password_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:text="@string/forgot_your_password"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/alternate_sign_in_text"
                    android:layout_width="121dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/or_sign_in_with"
                    android:textAlignment="center"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/facebook_button"
                        android:layout_width="26dp"
                        android:layout_height="26dp"
                        android:layout_margin="5dp"
                        app:srcCompat="@drawable/facebook" />

                    <ImageButton
                        android:id="@+id/gmail_button"
                        android:layout_width="41dp"
                        android:layout_height="30dp"
                        android:layout_margin="5dp"
                        app:srcCompat="@drawable/gmail" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>


    </LinearLayout>

    <!--    <com.google.android.material.bottomnavigation.BottomNavigationView-->
    <!--        android:id="@+id/bottomNavigationView"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="50dp"-->
    <!--        android:background="@color/dark_blue"-->
    <!--        android:textAlignment="center"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.5"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:menu="@menu/bottom_nav_menu">-->

    <!--        <Button-->
    <!--            android:id="@+id/button2"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:text="New Here? Sign Up"-->
    <!--            android:background="@android:color/transparent"-->
    <!--            android:textColor="@color/white_color" />-->
    <!--    </com.google.android.material.bottomnavigation.BottomNavigationView>-->

</RelativeLayout>